--- a/Ruqqus.NET/Ruqqus.NET.csproj
+++ b/Ruqqus.NET/Ruqqus.NET.csproj
@@ -14,6 +14,7 @@
         <RepositoryType>git</RepositoryType>
         <PackageTags>ruqqus;reddit;guild;guilds;community;communities</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <RootNamespace>Ruqqus</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
