--- a/Ruqqus.NET/Ruqqus.NET.csproj
+++ b/Ruqqus.NET/Ruqqus.NET.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <Title>Ruqqus.NET</Title>
         <Authors>ForeverZer0</Authors>
         <Description> A C# API implementation for Ruqqus, an open-source platform for online communities, free of censorship and moderator abuse by design.</Description>
