--- a/Ruqqus.NET/Ruqqus.NET.csproj
+++ b/Ruqqus.NET/Ruqqus.NET.csproj
@@ -28,6 +28,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <NoWarn>1701;1702;CS0649</NoWarn>
+      <DocumentationFile>bin\Release\Ruqqus.NET.xml</DocumentationFile>
     </PropertyGroup>
 
 </Project>
