Separated OAuth functionality from Client class Added JSON serialization to all types Reorganized and refactored

--- a/Ruqqus.NET/Ruqqus.NET.csproj
+++ b/Ruqqus.NET/Ruqqus.NET.csproj
@@ -21,6 +21,22 @@
         <None Include="LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)" />
         <None Include="icon.png" Pack="true" PackagePath="/" />
     </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Update="Strings.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <None Remove="result.html" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Strings.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Strings.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
     
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <NoWarn>1701;1702;CS0649</NoWarn>
