--- a/Ruqqus.NET/Ruqqus.NET.csproj
+++ b/Ruqqus.NET/Ruqqus.NET.csproj
@@ -17,7 +17,7 @@
         <PackageVersion>1.2.0</PackageVersion>
         <AssemblyVersion>1.2.0</AssemblyVersion>
         <FileVersion>1.2.0</FileVersion>
-        <TargetFrameworks>netstandard2.1;netcoreapp3.1</TargetFrameworks>
+        <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
